crates/python_parser/tests/snapshots/invalid_syntax@f_string_invalid_conversion_flag_other_tok.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/f_string_invalid_conversion_flag_other_tok.py
---
## AST

```
Module(
    ModModule {
        range: 0..22,
        body: [
            Expr(
                ExprStmt {
                    range: 0..10,
                    value: FString(
                        FStringExpr {
                            range: 0..10,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 0..10,
                                            elements: [
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 2..9,
                                                        expression: Name(
                                                            NameExpr {
                                                                range: 3..4,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 11..21,
                    value: FString(
                        FStringExpr {
                            range: 11..21,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 11..21,
                                            elements: [
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 13..20,
                                                        expression: Name(
                                                            NameExpr {
                                                                range: 14..15,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | f"{x!123}"
  |      ^^^ Syntax Error: f-string: invalid conversion character
2 | f"{x!'a'}"
  |


  |
1 | f"{x!123}"
2 | f"{x!'a'}"
  |      ^^^ Syntax Error: f-string: invalid conversion character
  |
